# nav_answer

./: .gitignore
img_process/: CMakeLists.txt  package.xml
img_process/include/img_process/: img_process.hpp
img_process/src/: img_process.cpp  img_process_node.cpp
nav2_pure_pursuit_controller/include/nav2_pure_pursuit_controller/: pure_pursuit_controller.hpp
nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
robot_behavior_tree/: CMakeLists.txt  nav2_tree_nodes.xml  package.xml
robot_behavior_tree/include/robot_behavior_tree/plugins/action/: aim_enemy.hpp  explore.hpp  go_base.hpp  go_enemy_base.hpp  go_star.hpp  nav_vel_remap.hpp  update_map_info.hpp  update_mapinfo.hpp
robot_behavior_tree/include/robot_behavior_tree/plugins/condition/: if_HP_or_bullet_low.hpp  if_game_start.hpp  if_is_transfering.hpp  if_shield_open.hpp  is_have_key.hpp
robot_behavior_tree/plugins/action/: aim_enemy.cpp  explore.cpp  go_base.cpp  go_enemy_base.cpp  go_star.cpp  nav_vel_remap.cpp  update_map_info.cpp  update_mapinfo.cpp
robot_behavior_tree/plugins/condition/: if_HP_or_bullet_low.cpp  if_game_start.cpp  if_is_transfering.cpp  if_shield_open.cpp  is_have_key.cpp
robot_bring_up/: CMakeLists.txt  package.xml
robot_bring_up/config/: params.yaml  rviz_config.rviz
robot_bring_up/launch/: bringup_launch.py  navigation_launch.py  sentry.launch.py
robot_bt_decision_maker/: CMakeLists.txt  package.xml  point
robot_bt_decision_maker/behavior_trees/: AnswerBT.xml  AnswerBT_test.xml
robot_bt_decision_maker/include/robot_bt_decision_maker/: robot_bt_decision_maker.hpp
robot_bt_decision_maker/launch/: robot_bt_decision_maker.launch.py
robot_bt_decision_maker/src/: robot_bt_decision_maker.cpp  robot_bt_decision_maker_node.cpp
robot_bt_navigator/: CMakeLists.txt  package.xml
robot_bt_navigator/behavior_trees/: nav2_tree_nodes.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
robot_bt_navigator/include/robot_bt_navigator/: bt_navigator.hpp  navigator.hpp
robot_bt_navigator/include/robot_bt_navigator/navigators/: navigate_through_poses.hpp  navigate_to_pose.hpp
robot_bt_navigator/src/: bt_navigator.cpp  main.cpp
robot_bt_navigator/src/navigators/: navigate_through_poses.cpp  navigate_to_pose.cpp
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: MapInfo.msg  MapInfoMsgs.msg  SerialFullKey.msg  SerialSegmentKey.msg
robot_serial/: CMakeLists.txt  package.xml
robot_serial/include/: robot_serial.h
robot_serial/src/: robot_serial.cpp  robot_serial_node.cpp
