cmake_minimum_required(VERSION 3.8)
project(img_process)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

include_directories(
        include
)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(OpenCV REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2 REQUIRED)
find_package(robot_msgs REQUIRED)
find_package(example_interfaces REQUIRED)

add_executable(img_process_node src/img_process_node.cpp src/img_process.cpp)
ament_target_dependencies(img_process_node
        rclcpp
        sensor_msgs
        nav_msgs
        geometry_msgs
        tf2_ros
        tf2
        robot_msgs
        example_interfaces
        OpenCV
        cv_bridge
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(TARGETS ${PROJECT_NAME}_node
        DESTINATION lib/${PROJECT_NAME})
install(
        DIRECTORY launch config
        DESTINATION share/${PROJECT_NAME}
)

ament_package()
